# test-task-ai

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt
backend/: config.py  main.py
backend/routers/: routers.py
backend/schemas/: schemas.py
backend/services/: agent.py  calc.py  cpi.py
client/: app.py
