[project]
name = "test-task1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "openai>=1.42.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.39.0",
    "uvicorn[standard]>=0.30.0",
]
